--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^6.0.1",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
